test(headless): tighten extension resolution checks