@@ -6,84 +6,77 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import dev.ayagmar.quarkusforge.api.CatalogData;
 import dev.ayagmar.quarkusforge.persistence.ExtensionFavoritesStore;
 import java.time.Duration;
-import java.util.LinkedHashSet;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.TimeoutException;
 import org.junit.jupiter.api.Test;
 
 class HeadlessExtensionResolutionServiceTest {
-  private static final Duration TIMEOUT = Duration.ofSeconds(5);
   private static final Set<String> KNOWN_EXTENSION_IDS =
       Set.of("io.quarkus:quarkus-rest", "io.quarkus:quarkus-arc");
 
   @Test
-  void resolvesFavoritesAndBuiltInPresetsIntoKnownExtensions()
-      throws ExecutionException, InterruptedException, TimeoutException {
+  void resolvesBuiltInPresetsAndExplicitExtensionsWithoutDuplicates() throws Exception {
     StubCatalogLoader catalogLoader = new StubCatalogLoader();
     HeadlessExtensionResolutionService service =
-        new HeadlessExtensionResolutionService(
-            catalogLoader, favoritesStore("io.quarkus:quarkus-arc"));
+        new HeadlessExtensionResolutionService(catalogLoader, ExtensionFavoritesStore.inMemory());
 
     List<String> resolved =
         service.resolveExtensionIds(
             "io.quarkus.platform:3.31",
-            List.of("io.quarkus:quarkus-rest"),
-            List.of("favorites"),
+            List.of("io.quarkus:quarkus-arc"),
+            List.of("web"),
             KNOWN_EXTENSION_IDS,
-            TIMEOUT);
+            Duration.ofSeconds(1));
 
-    assertThat(resolved).containsExactly("io.quarkus:quarkus-arc", "io.quarkus:quarkus-rest");
-    assertThat(catalogLoader.loadBuiltInPresetsCalls).isZero();
+    assertThat(resolved).containsExactly("io.quarkus:quarkus-rest", "io.quarkus:quarkus-arc");
+    assertThat(catalogLoader.lastPresetPlatformStream).isEqualTo("io.quarkus.platform:3.31");
   }
 
   @Test
-  void loadsBuiltInPresetsOnlyWhenRequested()
-      throws ExecutionException, InterruptedException, TimeoutException {
-    StubCatalogLoader catalogLoader = new StubCatalogLoader();
+  void favoritesPresetFiltersRemovedFavoriteIds() throws Exception {
+    ExtensionFavoritesStore favoritesStore = ExtensionFavoritesStore.inMemory();
+    favoritesStore.saveAll(Set.of("io.quarkus:quarkus-rest", "io.quarkus:removed"), List.of());
     HeadlessExtensionResolutionService service =
-        new HeadlessExtensionResolutionService(catalogLoader, favoritesStore());
+        new HeadlessExtensionResolutionService(new StubCatalogLoader(), favoritesStore);
 
     List<String> resolved =
         service.resolveExtensionIds(
             "io.quarkus.platform:3.31",
             List.of(),
-            List.of("  Web  "),
+            List.of("favorites"),
             KNOWN_EXTENSION_IDS,
-            TIMEOUT);
+            Duration.ofSeconds(1));
 
     assertThat(resolved).containsExactly("io.quarkus:quarkus-rest");
-    assertThat(catalogLoader.loadBuiltInPresetsCalls).isEqualTo(1);
-    assertThat(catalogLoader.lastPlatformStream).isEqualTo("io.quarkus.platform:3.31");
   }
 
   @Test
-  void rejectsUnknownPresetWithAllowedPresetNames() {
-    StubCatalogLoader catalogLoader = new StubCatalogLoader();
+  void unknownPresetListsAllowedValues() {
     HeadlessExtensionResolutionService service =
-        new HeadlessExtensionResolutionService(catalogLoader, favoritesStore());
+        new HeadlessExtensionResolutionService(
+            new StubCatalogLoader(), ExtensionFavoritesStore.inMemory());
 
     assertThatThrownBy(
             () ->
                 service.resolveExtensionIds(
                     "io.quarkus.platform:3.31",
                     List.of(),
-                    List.of("missing"),
+                    List.of("nonexistent"),
                     KNOWN_EXTENSION_IDS,
-                    TIMEOUT))
+                    Duration.ofSeconds(1)))
         .isInstanceOf(ValidationException.class)
-        .hasMessageContaining("unknown preset 'missing'")
+        .hasMessageContaining("unknown preset 'nonexistent'")
         .hasMessageContaining("favorites")
         .hasMessageContaining("web");
   }
 
   @Test
-  void rejectsBlankAndUnknownExtensionInputs() {
-    StubCatalogLoader catalogLoader = new StubCatalogLoader();
+  void blankAndUnknownExtensionInputsFailValidation() {
     HeadlessExtensionResolutionService service =
-        new HeadlessExtensionResolutionService(catalogLoader, favoritesStore());
+        new HeadlessExtensionResolutionService(
+            new StubCatalogLoader(), ExtensionFavoritesStore.inMemory());
 
     assertThatThrownBy(
             () ->
@@ -92,53 +85,22 @@ class HeadlessExtensionResolutionServiceTest {
                     List.of("   ", "io.quarkus:missing"),
                     List.of(),
                     KNOWN_EXTENSION_IDS,
-                    TIMEOUT))
+                    Duration.ofSeconds(1)))
         .isInstanceOf(ValidationException.class)
-        .hasMessageContaining("extension: must not be blank")
+        .hasMessageContaining("must not be blank")
         .hasMessageContaining("unknown extension id 'io.quarkus:missing'");
   }
 
   @Test
-  void propagatesPresetLoadFailures() {
-    StubCatalogLoader catalogLoader = new StubCatalogLoader();
-    catalogLoader.presetLoadTimeout = new TimeoutException("timed out");
-    HeadlessExtensionResolutionService service =
-        new HeadlessExtensionResolutionService(catalogLoader, favoritesStore());
-
-    assertThatThrownBy(
-            () ->
-                service.resolveExtensionIds(
-                    "io.quarkus.platform:3.31",
-                    List.of(),
-                    List.of("web"),
-                    KNOWN_EXTENSION_IDS,
-                    TIMEOUT))
-        .isInstanceOf(TimeoutException.class)
-        .hasMessageContaining("timed out");
-  }
-
-  private static ExtensionFavoritesStore favoritesStore(String... favoriteExtensionIds) {
-    Set<String> favorites = new LinkedHashSet<>(List.of(favoriteExtensionIds));
-    return new ExtensionFavoritesStore() {
-      @Override
-      public Set<String> loadFavoriteExtensionIds() {
-        return favorites;
-      }
-
-      @Override
-      public List<String> loadRecentExtensionIds() {
-        return List.of();
-      }
-
-      @Override
-      public void saveAll(Set<String> favoriteExtensionIds, List<String> recentExtensionIds) {}
-    };
+  void normalizePresetsTrimsCaseAndDuplicates() {
+    assertThat(
+            HeadlessExtensionResolutionService.normalizePresets(
+                Arrays.asList("  Web  ", "favorites", "web", "", null)))
+        .containsExactly("web", "favorites");
   }
 
   private static final class StubCatalogLoader implements HeadlessCatalogLoader {
-    TimeoutException presetLoadTimeout;
-    int loadBuiltInPresetsCalls;
-    String lastPlatformStream;
+    String lastPresetPlatformStream;
 
     @Override
     public CatalogData loadCatalogData(Duration timeout) {
@@ -146,13 +108,8 @@ class HeadlessExtensionResolutionServiceTest {
     }
 
     @Override
-    public Map<String, List<String>> loadBuiltInPresets(String platformStream, Duration timeout)
-        throws TimeoutException {
-      loadBuiltInPresetsCalls++;
-      lastPlatformStream = platformStream;
-      if (presetLoadTimeout != null) {
-        throw presetLoadTimeout;
-      }
+    public Map<String, List<String>> loadBuiltInPresets(String platformStream, Duration timeout) {
+      lastPresetPlatformStream = platformStream;
       return Map.of("web", List.of("io.quarkus:quarkus-rest"));
     }
 
